# flatgrep

./: .gitignore  LICENSE  README.md  pyproject.toml
src/cli/: flatpak_cli.py
src/flatgrep/: main.py
