[project]
name = "flatgrep"
version = "0.2.7"
authors = [
    { name = "Rodolfo Franca", email="souzafrodolfo@gmail.com"}
]
description = "Quicky interact with flatpak cli"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
license-files = ["LICEN[CS]E*"]
dependencies = [
    "build>=1.3.0",
    "pyfzf==0.3.1",
    "pyperclip==1.9.0",
    "rich==14.1.0",
    "setuptools==80.9.0",
    "twine>=6.2.0",
]

[project.scripts]
flatgrep = "flatgrep.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flatgrep"]

